--- a/Script/Setting/Language/vi-vn.json
+++ b/Script/Setting/Language/vi-vn.json
@@ -134,67 +134,17 @@
     "popcap.animation.from_animation.invalid_transform": "Chuyển đổi không hợp lệ biến thể thành tiêu chuẩn",
     "popcap.animation.from_flash": "PopCap Animation: Flash sang JSON",
     "popcap.animation.from_flash.action_layer_name_must_be_action": "Tên lớp thứ hai trong hoạt ảnh chính phải là tên \"action\"",
-    "popcap.animation.from_flash.cannot_find_image": "Không tìm thấy image {}",
-    "popcap.animation.from_flash.cannot_find_image_in_data": "Không thể tìm thấy image {} trong data.json",
-    "popcap.animation.from_flash.cannot_find_resource_name": "Không thể tìm thấy tên resource {} trong data.json",
-    "popcap.animation.from_flash.cannot_find_sprite": "Không thể tìm thấy sprite {}",
-    "popcap.animation.from_flash.document_has_no_DOMDocument": "DOMDocument.xml không có thẻ \"DOMDocument\"",
-    "popcap.animation.from_flash.document_has_no_DOMFrame": "Tài liệu không có DOMFrame",
-    "popcap.animation.from_flash.document_has_no_DOMLayer": "DOMDocument.xml không có thẻ \"DOMLayer\" trong \"layers\"",
-    "popcap.animation.from_flash.document_has_no_DOMTimeline": "DOMDocument.xml không có thẻ \"DOMTimeline\" trong \"timelines\"",
-    "popcap.animation.from_flash.document_has_no_folder": "Thuộc tính \"folder\" không tồn tại trong DOMDocument.xml",
     "popcap.animation.from_flash.document_has_no_frame_name": "Tài liệu không có tên khung hình",
     "popcap.animation.from_flash.document_has_no_frames": "Tài liệu không có khung hình",
     "popcap.animation.from_flash.document_has_no_layers": "DOMDocument.xml không có thẻ \"layers\" trong \"DOMTimeline\"",
     "popcap.animation.from_flash.document_has_no_media": "Thuộc tính \"media\" không tồn tại trong DOMDocument.xml",
-    "popcap.animation.from_flash.document_has_no_symbols": "Thuộc tính \"symbols\" không tồn tại trong DOMDocument.xml",
-    "popcap.animation.from_flash.document_has_no_timelines": "DOMDocument.xml không có thẻ \"timelines\" trong \"DOMDocument\"",
-    "popcap.animation.from_flash.document_name_must_be_animation": "Thuộc tính \"name\" trong \"DOMTimeline\" phải có giá trị \"animation\" trong DOMDocument.xml",
     "popcap.animation.from_flash.document_name_must_be_command": "Thuộc tính \"name\" trong \"DOMLayer\" phải có giá trị \"command\" trong DOMDocument.xml",
-    "popcap.animation.from_flash.dom_frame_has_no_DOMSymbolInstance": "DOMFrame không có \"DOMSymbolInstance\" trong DOMDocument.xml, gây ra từ {}",
-    "popcap.animation.from_flash.dom_frame_has_no_elements": "DOMFrame không có phần tử trong DOMDocument.xml, gây ra từ {}",
-    "popcap.animation.from_flash.dom_symbol_cannot_be_array": "DOMSymbolInstance không thể có nhiều hơn 1 phần tử trong DOMDocument.xml, gây ra từ {}",
-    "popcap.animation.from_flash.image_has_no_DOMBitmapInstance": "Image {} không có thuộc tính \"DOMBitmapInstance\" trong \"elements\"",
-    "popcap.animation.from_flash.image_has_no_DOMLayer": "Image {} không có thuộc tính \"DOMLayer\"",
-    "popcap.animation.from_flash.image_has_no_DOMSymbolItem": "Image {} không có thuộc tính \"DOMSymbolItem\"",
-    "popcap.animation.from_flash.image_has_no_DOMframe": "Image {} không có thuộc tính \"DOMFrame\" trong \"frames\"",
-    "popcap.animation.from_flash.image_has_no_DOMtimeline": "Image {} không có thuộc tính \"DOMtimeline\" trong \"timeline\"",
-    "popcap.animation.from_flash.image_has_no_elements": "Image {} không có thuộc tính \"elements\" trong \"DOMFrame\"",
-    "popcap.animation.from_flash.image_has_no_frames": "Image {} không có thuộc tính \"frames\" trong \"DOMLayer\"",
-    "popcap.animation.from_flash.image_has_no_layers": "Image {} không có thuộc tính \"layers\"",
-    "popcap.animation.from_flash.image_has_no_matrix": "Image {} không có thuộc tính \"matrix\" trong \"DOMBitmapInstance\"",
-    "popcap.animation.from_flash.image_has_no_timeline": "Image {} không có thuộc tính \"timeline\"",
-    "popcap.animation.from_flash.instance_layer_name_must_be_instance": "Tên layer thứ ba trong hoạt ảnh chính phải là tên \"instance\"",
     "popcap.animation.from_flash.invalid_action_index": "Tên action không khớp trong DOMDocument.xml, dự kiến {}, gây ra bởi {}",
     "popcap.animation.from_flash.invalid_action_label": "Label hành động không hợp lệ trong DOMDocument.xml, vì giá trị \"labelType\" phải là \"name\", gây ra bởi {}",
     "popcap.animation.from_flash.invalid_command": "Lệnh trong thẻ \"script\" không hợp lệ. Lệnh không hợp lệ: \"{}\"",
     "popcap.animation.from_flash.invalid_document_DOMLayer_length": "DOMDocument.xml chứa DOMLayer không hợp lệ, nó chỉ nên có một cho \"flow\" và một cho \"command\"",
     "popcap.animation.from_flash.invalid_document_flow": "DOMDocument.xml chứa DOMLayer không hợp lệ, phần tử đầu tiên phải có tên = \"flow\"",
     "popcap.animation.from_flash.invalid_dom_script": "\"ActionScript\" không hợp lệ, nó thiếu thẻ \"script\", tại chỉ mục {}. Kể cả khi \"ActionScript\" trống, thẻ \"script\" phải được cung cấp",
-    "popcap.animation.from_flash.invalid_image_height": "Chiều cao hình ảnh trong \"{}\" không thể là số âm",
-    "popcap.animation.from_flash.invalid_image_matrix": "Image {} không có thuộc tính \"Matrix\" trong \"matrix\"",
-    "popcap.animation.from_flash.invalid_image_name": "Tên image không hợp lệ trong {}",
-    "popcap.animation.from_flash.invalid_image_path": "Đường dẫn image không hợp lệ trong {}",
-    "popcap.animation.from_flash.invalid_image_width": "Chiều rộng image trong \"{}\" không thể là số âm",
-    "popcap.animation.from_flash.invalid_name_match": "Sprite {} chỉ có thể gọi \"image\" hoặc \"sprite\" trong lớp {}",
-    "popcap.animation.from_flash.invalid_script_cdata": "\"script\" không hợp lệ, nó phải được viết trong thẻ \"CDATA\", tại chỉ mục {}. Một thẻ \"script\" phải cung cấp \"CDATA\"",
-    "popcap.animation.from_flash.invalid_sprite_color": "Sprite {} trong lớp {} có màu sprite không hợp lệ",
-    "popcap.animation.from_flash.invalid_sprite_matrix": "Sprite {} trong lớp {} có ma trận sprite không hợp lệ",
-    "popcap.animation.from_flash.invalid_sprite_name": "Tên sprite không khớp trong \"sprite/{}.xml\", nhận: {} nhưng thực tế {}",
-    "popcap.animation.from_flash.invalid_version": "Số phiên bản không hợp lệ, số phiên bản dự kiến từ 1 đến 6, nhận được {}",
-    "popcap.animation.from_flash.label_layer_name_must_be_label": "Tên lớp đầu tiên trong hoạt ảnh chính phải là tên \"label\"",
-    "popcap.animation.from_flash.label_name_cannot_null": "Tên label không được để null hoặc để trống",
-    "popcap.animation.from_flash.mismatch_name_match": "Sprite {} không khớp name_match trong lớp {}, nhận được {} không bằng với {}",
-    "popcap.animation.from_flash.missing_label_xml": "Label {} đang thiếu",
-    "popcap.animation.from_flash.number_is_NAN": "Thu được không phải là một số khi phân tích số, nhận được: {}",
-    "popcap.animation.from_flash.sprite_has_no_DOMFrame": "Sprite {} không có thuộc tính \"DOMFrame\" trong \"DOMLayer\" trong lớp {}",
-    "popcap.animation.from_flash.sprite_has_no_DOMLayer": "Sprite {} không có thuộc tính \"DOMLayer\" trong lớp {}",
-    "popcap.animation.from_flash.sprite_has_no_DOMSymbolItem": "Sprite {} không có thuộc tính \"DOMSymbolItem\"",
-    "popcap.animation.from_flash.sprite_has_no_DOMtimeline": "Sprite {} không có thuộc tính \"DOMtimeline\" trong \"timeline\"",
-    "popcap.animation.from_flash.sprite_has_no_elements": "Sprite {} không có thuộc tính \"elements\" trong \"DOMFrame\" trong lớp {}",
-    "popcap.animation.from_flash.sprite_has_no_frames": "Sprite {} không có thuộc tính \"frames\" trong \"DOMLayer\" trong layer {}",
-    "popcap.animation.from_flash.sprite_has_no_layers": "Sprite {} không có thuộc tính \"layers\"",
-    "popcap.animation.from_flash.sprite_has_no_timeline": "Sprite {} không có thuộc tính \"timeline\"",
     "popcap.animation.from_flash_and_encode": "PopCap Animation: Flash sang PAM",
     "popcap.animation.invalid_animation_transform_length": "Độ dài transform không hợp lệ, dự kiến {} nhưng lại nhận được {}",
     "popcap.animation.invalid_animation_transform": "Transform hoạt ảnh không hợp lệ",
@@ -714,5 +664,80 @@
     "directory": "Directory",
     "input_type": "Input type",
     "input_number_to_process_batch_function": "Input number to process batch function",
-    "input_directory": "Input directory"
+    "input_directory": "Input directory",
+    "popcap.animation.from_flash.cannot_find_image": "Image {} is not found, recheck the image because it might not exists in library/image",
+    "popcap.animation.from_flash.cannot_find_image_in_data": "Cannot find image {} in data.json, should include it under the \"image\" object",
+    "popcap.animation.from_flash.cannot_find_resource_name": "Cannot find resource name in {}, should check the sprite again or its information might be missing from data.json",
+    "popcap.animation.from_flash.cannot_find_sprite": "Cannot find sprite {}, make sure it exists in library/sprite",
+    "popcap.animation.from_flash.document_has_no_DOMDocument": "DOMDocument.xml has no ROOT tag \"DOMDocument\", this Document could be broken or not a valid DOMDocument file",
+    "popcap.animation.from_flash.document_has_no_DOMFrame": "Document has no DOMFrame",
+    "popcap.animation.from_flash.document_has_no_DOMLayer": "DOMDocument.xml has no tag \"DOMLayer\" inside \"layers\", you should add an <DOMLayer> tag inside <layers> tag",
+    "popcap.animation.from_flash.document_has_no_DOMTimeline": "DOMDocument.xml has no tag \"DOMTimeline\" inside \"timelines\", you should add an <DOMTimeline> tag inside <timelines> tag",
+    "popcap.animation.from_flash.document_has_no_folder": "Property \"folder\" is not existed in DOMDocument.xml, the property \"folder\" need to be defined",
+    "popcap.animation.from_flash.document_has_no_symbols": "Property \"symbols\" is not existed in DOMDocument.xml, recheck the DOMDocument as XML Tree View and try to find the <symbols> tag",
+    "popcap.animation.from_flash.document_has_no_timelines": "DOMDocument.xml has no tag \"timelines\" inside \"DOMDocument\", you should add an <timelines> tag inside <DOMDocument> tag",
+    "popcap.animation.from_flash.document_name_must_be_animation": "Property \"name\" in the \"DOMTimeline\" must have the value \"animation\" in DOMDocument.xml, should add an name property <DOMTimeline> tag, and its value must be \"animation\"",
+
+    "popcap.animation.from_flash.dom_frame_has_no_DOMSymbolInstance": "DOMFrame has no \"DOMSymbolInstance\" in DOMDocument.xml, caused from {}, you should add an <DOMSymbolInstance> tag inside <DOMFrame> tag",
+    "popcap.animation.from_flash.dom_frame_has_no_elements": "DOMFrame has no elements DOMDocument.xml, caused from {}, you should make sure that <DOMFrame> must contains element",
+    "popcap.animation.from_flash.dom_symbol_cannot_be_array": "DOMSymbolInstance cannot have more than one element in DOMDocument.xml, caused from {}, you should make sure that <DOMSymbolInstance> must contains only one single element",
+    "popcap.animation.from_flash.image_has_no_DOMBitmapInstance": "Image {} has no property \"DOMBitmapInstance\" in \"elements\", you should make sure that <DOMBitmapInstance> tag must be inside <elements> tag",
+    "popcap.animation.from_flash.image_has_no_DOMLayer": "Image {} has no property \"DOMLayer\", you should make sure that <DOMLayer> tag is inside <layers> tag",
+    "popcap.animation.from_flash.image_has_no_DOMSymbolItem": "Image {} has no \"DOMSymbolItem\" property, you should make sure that <DOMSymbolItem> tag is inside the image",
+    "popcap.animation.from_flash.image_has_no_DOMframe": "Image {} has no property \"DOMFrame\" in \"frames\", you should make sure that <DOMFrame> tag is inside the <frames> tag",
+    "popcap.animation.from_flash.image_has_no_DOMtimeline": "Image {} has no property \"DOMtimeline\" inside \"timeline\", you should make sure that <DOMtimeline> tag is inside the <timeline> tag",
+    "popcap.animation.from_flash.image_has_no_elements": "Image {} has no property \"elements\" in \"DOMFrame\", you should make sure that <elements> tag is inside the <DOMFrame> tag",
+    "popcap.animation.from_flash.image_has_no_frames": "Image {} has no property \"frames\" in \"DOMLayer\", you should make sure that <frames> tag is inside the <DOMLayer> tag",
+    "popcap.animation.from_flash.image_has_no_layers": "Image {} has no property \"layers\", you should make sure that <layers> tag is inside the <DOMTimeline> tag",
+    "popcap.animation.from_flash.image_has_no_matrix": "Image {} has no property \"matrix\" in \"DOMBitmapInstance\", you should make sure that <matrix> tag is inside the <DOMBitmapInstance> tag",
+    "popcap.animation.from_flash.image_has_no_timeline": "Image {} has no property \"timeline\", you should make sure that <timeline> tag is inside the <DOMSymbolItem> tag",
+    "popcap.animation.from_flash.instance_layer_name_must_be_instance": "The third layer name in main animation must be \"instance\" name",
+
+    "popcap.animation.from_flash.invalid_image_height": "Image height in \"{}\" cannot be a negative number",
+    "popcap.animation.from_flash.invalid_image_matrix": "Image {} has no property \"Matrix\" in \"matrix\", you should make sure that <Matrix> tag is inside the <matrix> tag",
+    "popcap.animation.from_flash.invalid_image_name": "Image name is invalid in {}, you should recheck for the image name in the XML file or Adobe Animate",
+    "popcap.animation.from_flash.invalid_image_path": "Image path is invalid in {}, image can only call media inside the library/media",
+    "popcap.animation.from_flash.invalid_image_width": "Image width in \"{}\" cannot be a negative number",
+    "popcap.animation.from_flash.invalid_name_match": "Sprite {} can only call \"image\" or \"sprite\" in layer {}, perhaps it is calling an invalid media or label",
+    "popcap.animation.from_flash.invalid_script_cdata": "\"script\" is invalid, it must be written in \"CDATA\" tag, from index {}. A \"script\" must be provide with \"CDATA\"",
+    "popcap.animation.from_flash.invalid_sprite_color": "Sprite {} in layer {} has invalid sprite color, it is missing the <Color> tag inside <color> tag",
+    "popcap.animation.from_flash.invalid_sprite_matrix": "Sprite {} in layer {} has invalid sprite matrix, it is missing the <Matrix> tag inside <matrix> tag",
+    "popcap.animation.from_flash.invalid_sprite_name": "Mismatch sprite name in \"sprite/{}.xml\", received: {} but actual {}",
+    "popcap.animation.from_flash.invalid_version": "Invalid version number, expected version number from 1 to 6, received {}",
+    "popcap.animation.from_flash.label_layer_name_must_be_label": "The first layer name in main animation must be \"label\" name",
+    "popcap.animation.from_flash.label_name_cannot_null": "Label name cannot null or empty",
+    "popcap.animation.from_flash.mismatch_name_match": "Sprite {} mismatch the name_match in layer {}, received {} is not equals to {}",
+    "popcap.animation.from_flash.missing_label_xml": "Label {} is missing, recheck your flash project in order to handle the problem",
+    "popcap.animation.from_flash.number_is_NAN": "Obtained not a number when tried to parse number, received: {}",
+    "popcap.animation.from_flash.sprite_has_no_DOMFrame": "Sprite {} has no property \"DOMFrame\" in \"DOMLayer\" in layer {}, you should make sure that <DOMFrame> tag is inside <DOMLayer> tag",
+    "popcap.animation.from_flash.sprite_has_no_DOMLayer": "Sprite {} has no property \"DOMLayer\" in layer {}, you should make sure that <DOMLayer> tag is inside <layers> tag",
+    "popcap.animation.from_flash.sprite_has_no_DOMSymbolItem": "Sprite {} has no \"DOMSymbolItem\" property, you should make sure that <DOMSymbolItem> tag is exists inside the sprite",
+    "popcap.animation.from_flash.sprite_has_no_DOMtimeline": "Sprite {} has no property \"DOMtimeline\" inside \"timeline\", you should make sure that <DOMtimeline> tag is inside <timeline> tag",
+    "popcap.animation.from_flash.sprite_has_no_elements": "Sprite {} has no property \"elements\" in \"DOMFrame\" in layer {}, you should make sure that <elements> tag is inside <DOMFrame> tag",
+    "popcap.animation.from_flash.sprite_has_no_frames": "Sprite {} has no property \"frames\" in \"DOMLayer\" in layer {}, you should make sure that <frames> tag is inside <DOMLayer> tag",
+    "popcap.animation.from_flash.sprite_has_no_layers": "Sprite {} has no property \"layers\", you should make sure that sprite must contains the <layers> tag",
+    "popcap.animation.from_flash.sprite_has_no_timeline": "Sprite {} has no property \"timeline\", you should make sure that sprite must contains the <timeline> tag",
+    "pvz2.scg.exchange_custom_resource_info.invalid_convert": "Cannot convert resources type, got: {}",
+    "pvz2.scg.exchange_subgroup_compression_info.invalid_convert": "Cannot get resolution from the res-info, the provided resolution is not a number of string, got value: {}",
+    "popcap.animation.from_flash.frame_index_is_not_a_number": "Frame index is not a number, sprite: {}, value: {}",
+    "popcap.animation.from_flash.frame_duration_is_not_a_number": "Frame duration is not a number, sprite: {}, value: {}",
+    "popcap.animation.from_flash.animation_must_have_one_label": "Animation must have at least one label",
+    "popcap.animation.from_flash.label_length_does_not_match": "Label {} have frame length does not match",
+    "popcap.animation.from_flash.frame_index_is_not_a_integer": "Frame index is not a integer, got: {}",
+    "popcap.animation.from_flash.frame_duration_is_not_a_integer": "Frame duration is not a integer, got: {}",
+    "popcap.animation.from_flash.frame_rate_is_not_a_integer": "Frame rate is not a integer, got: {}",
+    "popcap.animation.from_flash.width_is_not_a_integer": "Width is not a integer, got: {}",
+    "popcap.animation.from_flash.height_is_not_a_integer": "Height is not a integer, got: {}",
+    "popcap.newton.invalid_res_type": "Invalid res type, expected an integer, got: {}",
+    "popcap.particles.invalid_emitter_image": "Invalid imitter image convert, expected an integer string",
+    "popcap.particles.invalid_argument": "Invalid {} convert, expected an number string",
+    "popcap.reanim.invalid_argument": "Invalid {} convert, expected an number string",
+    "popcap.animation.from_flash.transform_is_not_a_valid_number": "Transform property {} is not a correct number, got: {}",
+    "popcap.animation.from_flash.color_is_not_a_valid_number": "Color property {} is not a correct number, got: {}",
+    "popcap.animation.from_flash.matrix_is_not_a_valid_number": "Matrix property {} is not a correct number, got: {}",
+    "popcap.reanim.matrix_is_not_a_valid_number": "Matrix property {} is not a correct number, got: {}",
+    "popcap.rsb.unpack_cipher.cannot_convert_resolution": "Cannot convert resolution",
+    "js.skip_argument_input": "Skip argument input",
+    "js.file_already_exists": "File \"{}\" already exists, it will be overwritten...",
+    "js.directory_already_exists": "Directory \"{}\" already exists, it's files will be overwritten if the name is duplicated"
 }
