--- a/Script/Setting/Language/en-us.json
+++ b/Script/Setting/Language/en-us.json
@@ -134,36 +134,36 @@
     "popcap.animation.from_animation.invalid_transform": "Invalid transform variant to standard",
     "popcap.animation.from_flash": "PopCap Animation: Flash to JSON",
     "popcap.animation.from_flash.action_layer_name_must_be_action": "The second layer name in main animation must be \"action\" name",
-    "popcap.animation.from_flash.cannot_find_image": "Image {} is not found",
-    "popcap.animation.from_flash.cannot_find_image_in_data": "Cannot find image {} in data.json",
-    "popcap.animation.from_flash.cannot_find_resource_name": "Cannot find resource name in {}",
-    "popcap.animation.from_flash.cannot_find_sprite": "Cannot find sprite {}",
-    "popcap.animation.from_flash.document_has_no_DOMDocument": "DOMDocument.xml has no ROOT tag \"DOMDocument\"",
+    "popcap.animation.from_flash.cannot_find_image": "Image {} is not found, recheck the image because it might not exists in library/image",
+    "popcap.animation.from_flash.cannot_find_image_in_data": "Cannot find image {} in data.json, should include it under the \"image\" object",
+    "popcap.animation.from_flash.cannot_find_resource_name": "Cannot find resource name in {}, should check the sprite again or its information might be missing from data.json",
+    "popcap.animation.from_flash.cannot_find_sprite": "Cannot find sprite {}, make sure it exists in library/sprite",
+    "popcap.animation.from_flash.document_has_no_DOMDocument": "DOMDocument.xml has no ROOT tag \"DOMDocument\", this Document could be broken or not a valid DOMDocument file",
     "popcap.animation.from_flash.document_has_no_DOMFrame": "Document has no DOMFrame",
-    "popcap.animation.from_flash.document_has_no_DOMLayer": "DOMDocument.xml has no tag \"DOMLayer\" inside \"layers\"",
-    "popcap.animation.from_flash.document_has_no_DOMTimeline": "DOMDocument.xml has no tag \"DOMTimeline\" inside \"timelines\"",
-    "popcap.animation.from_flash.document_has_no_folder": "Property \"folder\" is not existed in DOMDocument.xml",
+    "popcap.animation.from_flash.document_has_no_DOMLayer": "DOMDocument.xml has no tag \"DOMLayer\" inside \"layers\", you should add an <DOMLayer> tag inside <layers> tag",
+    "popcap.animation.from_flash.document_has_no_DOMTimeline": "DOMDocument.xml has no tag \"DOMTimeline\" inside \"timelines\", you should add an <DOMTimeline> tag inside <timelines> tag",
+    "popcap.animation.from_flash.document_has_no_folder": "Property \"folder\" is not existed in DOMDocument.xml, the property \"folder\" need to be defined",
     "popcap.animation.from_flash.document_has_no_frame_name": "Document has no frame name",
     "popcap.animation.from_flash.document_has_no_frames": "Document has no frames",
     "popcap.animation.from_flash.document_has_no_layers": "DOMDocument.xml has no tag \"layers\" inside \"DOMTimeline\"",
     "popcap.animation.from_flash.document_has_no_media": "Property \"media\" is not existed in DOMDocument.xml",
-    "popcap.animation.from_flash.document_has_no_symbols": "Property \"symbols\" is not existed in DOMDocument.xml",
-    "popcap.animation.from_flash.document_has_no_timelines": "DOMDocument.xml has no tag \"timelines\" inside \"DOMDocument\"",
-    "popcap.animation.from_flash.document_name_must_be_animation": "Property \"name\" in the \"DOMTimeline\" must have the value \"animation\" in DOMDocument.xml",
+    "popcap.animation.from_flash.document_has_no_symbols": "Property \"symbols\" is not existed in DOMDocument.xml, recheck the DOMDocument as XML Tree View and try to find the <symbols> tag",
+    "popcap.animation.from_flash.document_has_no_timelines": "DOMDocument.xml has no tag \"timelines\" inside \"DOMDocument\", you should add an <timelines> tag inside <DOMDocument> tag",
+    "popcap.animation.from_flash.document_name_must_be_animation": "Property \"name\" in the \"DOMTimeline\" must have the value \"animation\" in DOMDocument.xml, should add an name property <DOMTimeline> tag, and its value must be \"animation\"",
     "popcap.animation.from_flash.document_name_must_be_command": "Property \"name\" in the \"DOMLayer\" must have the value \"command\" in DOMDocument.xml",
-    "popcap.animation.from_flash.dom_frame_has_no_DOMSymbolInstance": "DOMFrame has no \"DOMSymbolInstance\" in DOMDocument.xml, caused from {}",
-    "popcap.animation.from_flash.dom_frame_has_no_elements": "DOMFrame has no elements DOMDocument.xml, caused from {}",
-    "popcap.animation.from_flash.dom_symbol_cannot_be_array": "DOMSymbolInstance cannot have more than one element in DOMDocument.xml, caused from {}",
-    "popcap.animation.from_flash.image_has_no_DOMBitmapInstance": "Image {} has no property \"DOMBitmapInstance\" in \"elements\"",
-    "popcap.animation.from_flash.image_has_no_DOMLayer": "Image {} has no property \"DOMLayer\"",
-    "popcap.animation.from_flash.image_has_no_DOMSymbolItem": "Image {} has no \"DOMSymbolItem\" property",
-    "popcap.animation.from_flash.image_has_no_DOMframe": "Image {} has no property \"DOMFrame\" in \"frames\"",
-    "popcap.animation.from_flash.image_has_no_DOMtimeline": "Image {} has no property \"DOMtimeline\" inside \"timeline\"",
-    "popcap.animation.from_flash.image_has_no_elements": "Image {} has no property \"elements\" in \"DOMFrame\"",
-    "popcap.animation.from_flash.image_has_no_frames": "Image {} has no property \"frames\" in \"DOMLayer\"",
-    "popcap.animation.from_flash.image_has_no_layers": "Image {} has no property \"layers\"",
-    "popcap.animation.from_flash.image_has_no_matrix": "Image {} has no property \"matrix\" in \"DOMBitmapInstance\"",
-    "popcap.animation.from_flash.image_has_no_timeline": "Image {} has no property \"timeline\"",
+    "popcap.animation.from_flash.dom_frame_has_no_DOMSymbolInstance": "DOMFrame has no \"DOMSymbolInstance\" in DOMDocument.xml, caused from {}, you should add an <DOMSymbolInstance> tag inside <DOMFrame> tag",
+    "popcap.animation.from_flash.dom_frame_has_no_elements": "DOMFrame has no elements DOMDocument.xml, caused from {}, you should make sure that <DOMFrame> must contains element",
+    "popcap.animation.from_flash.dom_symbol_cannot_be_array": "DOMSymbolInstance cannot have more than one element in DOMDocument.xml, caused from {}, you should make sure that <DOMSymbolInstance> must contains only one single element",
+    "popcap.animation.from_flash.image_has_no_DOMBitmapInstance": "Image {} has no property \"DOMBitmapInstance\" in \"elements\", you should make sure that <DOMBitmapInstance> tag must be inside <elements> tag",
+    "popcap.animation.from_flash.image_has_no_DOMLayer": "Image {} has no property \"DOMLayer\", you should make sure that <DOMLayer> tag is inside <layers> tag",
+    "popcap.animation.from_flash.image_has_no_DOMSymbolItem": "Image {} has no \"DOMSymbolItem\" property, you should make sure that <DOMSymbolItem> tag is inside the image",
+    "popcap.animation.from_flash.image_has_no_DOMframe": "Image {} has no property \"DOMFrame\" in \"frames\", you should make sure that <DOMFrame> tag is inside the <frames> tag",
+    "popcap.animation.from_flash.image_has_no_DOMtimeline": "Image {} has no property \"DOMtimeline\" inside \"timeline\", you should make sure that <DOMtimeline> tag is inside the <timeline> tag",
+    "popcap.animation.from_flash.image_has_no_elements": "Image {} has no property \"elements\" in \"DOMFrame\", you should make sure that <elements> tag is inside the <DOMFrame> tag",
+    "popcap.animation.from_flash.image_has_no_frames": "Image {} has no property \"frames\" in \"DOMLayer\", you should make sure that <frames> tag is inside the <DOMLayer> tag",
+    "popcap.animation.from_flash.image_has_no_layers": "Image {} has no property \"layers\", you should make sure that <layers> tag is inside the <DOMTimeline> tag",
+    "popcap.animation.from_flash.image_has_no_matrix": "Image {} has no property \"matrix\" in \"DOMBitmapInstance\", you should make sure that <matrix> tag is inside the <DOMBitmapInstance> tag",
+    "popcap.animation.from_flash.image_has_no_timeline": "Image {} has no property \"timeline\", you should make sure that <timeline> tag is inside the <DOMSymbolItem> tag",
     "popcap.animation.from_flash.instance_layer_name_must_be_instance": "The third layer name in main animation must be \"instance\" name",
     "popcap.animation.from_flash.invalid_action_index": "Mismatch action name in DOMDocument.xml, expected {}, caused by {}",
     "popcap.animation.from_flash.invalid_action_label": "Action label is invalid in DOMDocument.xml, because the \"labelType\" value must be \"name\", caused by {}",
@@ -172,29 +172,29 @@
     "popcap.animation.from_flash.invalid_document_flow": "DOMDocument.xml contains invalid DOMLayer, the first element must have name = \"flow\"",
     "popcap.animation.from_flash.invalid_dom_script": "\"ActionScript\" is invalid, it missing \"script\" tag, from index {}. Even as empty \"ActionScript\", \"script\" tag need to be provided",
     "popcap.animation.from_flash.invalid_image_height": "Image height in \"{}\" cannot be a negative number",
-    "popcap.animation.from_flash.invalid_image_matrix": "Image {} has no property \"Matrix\" in \"matrix\"",
-    "popcap.animation.from_flash.invalid_image_name": "Image name is invalid in {}",
-    "popcap.animation.from_flash.invalid_image_path": "Image path is invalid in {}",
+    "popcap.animation.from_flash.invalid_image_matrix": "Image {} has no property \"Matrix\" in \"matrix\", you should make sure that <Matrix> tag is inside the <matrix> tag",
+    "popcap.animation.from_flash.invalid_image_name": "Image name is invalid in {}, you should recheck for the image name in the XML file or Adobe Animate",
+    "popcap.animation.from_flash.invalid_image_path": "Image path is invalid in {}, image can only call media inside the library/media",
     "popcap.animation.from_flash.invalid_image_width": "Image width in \"{}\" cannot be a negative number",
-    "popcap.animation.from_flash.invalid_name_match": "Sprite {} can only call \"image\" or \"sprite\" in layer {}",
+    "popcap.animation.from_flash.invalid_name_match": "Sprite {} can only call \"image\" or \"sprite\" in layer {}, perhaps it is calling an invalid media or label",
     "popcap.animation.from_flash.invalid_script_cdata": "\"script\" is invalid, it must be written in \"CDATA\" tag, from index {}. A \"script\" must be provide with \"CDATA\"",
-    "popcap.animation.from_flash.invalid_sprite_color": "Sprite {} in layer {} has invalid sprite color",
-    "popcap.animation.from_flash.invalid_sprite_matrix": "Sprite {} in layer {} has invalid sprite matrix",
+    "popcap.animation.from_flash.invalid_sprite_color": "Sprite {} in layer {} has invalid sprite color, it is missing the <Color> tag inside <color> tag",
+    "popcap.animation.from_flash.invalid_sprite_matrix": "Sprite {} in layer {} has invalid sprite matrix, it is missing the <Matrix> tag inside <matrix> tag",
     "popcap.animation.from_flash.invalid_sprite_name": "Mismatch sprite name in \"sprite/{}.xml\", received: {} but actual {}",
     "popcap.animation.from_flash.invalid_version": "Invalid version number, expected version number from 1 to 6, received {}",
     "popcap.animation.from_flash.label_layer_name_must_be_label": "The first layer name in main animation must be \"label\" name",
     "popcap.animation.from_flash.label_name_cannot_null": "Label name cannot null or empty",
     "popcap.animation.from_flash.mismatch_name_match": "Sprite {} mismatch the name_match in layer {}, received {} is not equals to {}",
-    "popcap.animation.from_flash.missing_label_xml": "Label {} is missing",
+    "popcap.animation.from_flash.missing_label_xml": "Label {} is missing, recheck your flash project in order to handle the problem",
     "popcap.animation.from_flash.number_is_NAN": "Obtained not a number when tried to parse number, received: {}",
-    "popcap.animation.from_flash.sprite_has_no_DOMFrame": "Sprite {} has no property \"DOMFrame\" in \"DOMLayer\" in layer {}",
-    "popcap.animation.from_flash.sprite_has_no_DOMLayer": "Sprite {} has no property \"DOMLayer\" in layer {}",
-    "popcap.animation.from_flash.sprite_has_no_DOMSymbolItem": "Sprite {} has no \"DOMSymbolItem\" property",
-    "popcap.animation.from_flash.sprite_has_no_DOMtimeline": "Sprite {} has no property \"DOMtimeline\" inside \"timeline\"",
-    "popcap.animation.from_flash.sprite_has_no_elements": "Sprite {} has no property \"elements\" in \"DOMFrame\" in layer {}",
-    "popcap.animation.from_flash.sprite_has_no_frames": "Sprite {} has no property \"frames\" in \"DOMLayer\" in layer {}",
-    "popcap.animation.from_flash.sprite_has_no_layers": "Sprite {} has no property \"layers\"",
-    "popcap.animation.from_flash.sprite_has_no_timeline": "Sprite {} has no property \"timeline\"",
+    "popcap.animation.from_flash.sprite_has_no_DOMFrame": "Sprite {} has no property \"DOMFrame\" in \"DOMLayer\" in layer {}, you should make sure that <DOMFrame> tag is inside <DOMLayer> tag",
+    "popcap.animation.from_flash.sprite_has_no_DOMLayer": "Sprite {} has no property \"DOMLayer\" in layer {}, you should make sure that <DOMLayer> tag is inside <layers> tag",
+    "popcap.animation.from_flash.sprite_has_no_DOMSymbolItem": "Sprite {} has no \"DOMSymbolItem\" property, you should make sure that <DOMSymbolItem> tag is exists inside the sprite",
+    "popcap.animation.from_flash.sprite_has_no_DOMtimeline": "Sprite {} has no property \"DOMtimeline\" inside \"timeline\", you should make sure that <DOMtimeline> tag is inside <timeline> tag",
+    "popcap.animation.from_flash.sprite_has_no_elements": "Sprite {} has no property \"elements\" in \"DOMFrame\" in layer {}, you should make sure that <elements> tag is inside <DOMFrame> tag",
+    "popcap.animation.from_flash.sprite_has_no_frames": "Sprite {} has no property \"frames\" in \"DOMLayer\" in layer {}, you should make sure that <frames> tag is inside <DOMLayer> tag",
+    "popcap.animation.from_flash.sprite_has_no_layers": "Sprite {} has no property \"layers\", you should make sure that sprite must contains the <layers> tag",
+    "popcap.animation.from_flash.sprite_has_no_timeline": "Sprite {} has no property \"timeline\", you should make sure that sprite must contains the <timeline> tag",
     "popcap.animation.from_flash_and_encode": "PopCap Animation: Flash to PAM",
     "popcap.animation.invalid_animation_transform_length": "Invalid transform length, expected {} but got {}",
     "popcap.animation.invalid_animation_transform": "Invalid animation transform",
