--- a/Script/Setting/Language/en-us.json
+++ b/Script/Setting/Language/en-us.json
@@ -737,5 +737,8 @@
     "popcap.rsb.unpack_cipher.cannot_convert_resolution": "Cannot convert resolution",
     "js.skip_argument_input": "Skip argument input",
     "js.file_already_exists": "File \"{}\" already exists, it will be overwritten...",
-    "js.directory_already_exists": "Directory \"{}\" already exists, it's files will be overwritten if the name is duplicated"
+    "js.directory_already_exists": "Directory \"{}\" already exists, it's files will be overwritten if the name is duplicated",
+    "popcap.rsb.invalid_locale_size": "Invalid locale size",
+    "popcap.rsb.invalid_header_size": "Invalid header size",
+    "popcap.rsb.invalid_subgroup_information_size": "Invalid subgroup information size"
 }
