--- a/Modding/lib/l10n/app_es.arb
+++ b/Modding/lib/l10n/app_es.arb
@@ -153,5 +153,6 @@
     "grid_type": "Grid Type",
     "message": "Message",
     "notification": "Notification",
-    "version": "Version"
+    "version": "Version",
+    "batch_function": "Batch function"
 }
