--- a/Modding/lib/l10n/app_es.arb
+++ b/Modding/lib/l10n/app_es.arb
@@ -2,157 +2,157 @@
     "@@locale": "es",
     "author_of_this_locale": "JNR",
     "en": "English",
-    "vi": "Vietnamese",
-    "es": "Spanish",
-    "ru": "Russian",
+    "vi": "Tiếng Việt",
+    "es": "Español",
+    "ru": "Pусский",
     "not_specified": "No especificado",
-    "default_setting": "Configuración por defecto",
+    "default_setting": "Ajustes visuales",
     "theme": "Tema",
     "language": "Lenguaje",
     "author": "Traductor",
-    "application_setting": "Configuración de la aplicación",
-    "send_notification": "Enviar notificación",
-    "storage_permission": "Permiso de almacenamiento",
+    "application_setting": "Ajustes de la herramienta",
+    "send_notification": "Recibir notificaciones",
+    "storage_permission": "Uso del almacenamiento",
     "granted": "Permitido",
-    "denied": "Denegado",
-    "toolchain": "Cadena de herramientas",
-    "upload_directory": "Subir directorio",
+    "denied": "No permitido",
+    "toolchain": "Carpeta de herramientas",
+    "upload_directory": "Cambiar directorio",
     "enable": "Activar",
     "disable": "Desactivar",
-    "okay": "Ok",
+    "okay": "Aceptar",
     "system": "Sistema",
     "light": "Claro",
     "dark": "Oscuro",
-    "js_page": "Categoría JS",
-    "home": "Casa",
-    "settings": "Configuración",
+    "js_page": "Scripts de JS",
+    "home": "Inicio",
+    "settings": "Ajustes",
     "shell": "Shell",
-    "shell_description": "Usar el Shell para procesar archivos",
-    "method_picker": "Método de selección",
-    "method_picker_description": "Seleccione el método a utilizar entre las categorías de métodos",
+    "shell_description": "Útil para procesar archivos",
+    "method_picker": "Seleccionar método",
+    "method_picker_description": "Seleccione un método",
     "js_execute": "Ejecutar JS",
-    "js_execute_description": "Ejecutar JS integrado",
+    "js_execute_description": "Ejecuta scripts de JS",
     "animation_viewer": "Visor de animaciones",
-    "animation_viewer_description": "A través del Visor de animación, vea la animación que se realizará",
-    "toolchain_is_invalid": "La cadena de herramientas no es válida",
-    "user_provided": "Usuario proveído",
-    "execute_again": "¿Ejecutar otra vez?",
-    "yes": "sí",
-    "no": "no",
+    "animation_viewer_description": "Previsualiza animaciones que el juego reproducirá",
+    "toolchain_is_invalid": "La carpeta de herramientas no es válida",
+    "user_provided": "EL usuario ingresó:",
+    "execute_again": "¿Ejecutar de nuevo?",
+    "yes": "Sí",
+    "no": "No",
     "elapsed_time": "Tiempo transcurrido",
     "upload_file": "Subir archivo",
     "recent_files": "Archivos recientes",
     "cancel": "Cancelar",
     "invalid_request": "Solicitud no válida",
-    "shell_request_behavior": "El Shell no puede cerrarse hasta que termine",
+    "shell_request_behavior": "Espere a que se terminen los procesos",
     "android_request": "Solicitud de Android",
-    "android_storage_access_permission_required": "Se requieren permisos de almacenamiento de Android para leer/escribir archivos",
-    "go_to_settings": "Ir a Configuración",
-    "shell_has_finished": "El Shell ha terminado el trabajo, ¡regrese a la aplicación ahora!",
+    "android_storage_access_permission_required": "Se requiere permiso de almacenamiento para crear o abrir archivos",
+    "go_to_settings": "Ir a Ajustes",
+    "shell_has_finished": "Se ha finalizado el proceso, ¡regrese a la aplicación!",
     "use": "Usar",
-    "select_option": "Seleccionar opción",
+    "select_option": "Opciones",
     "submit": "Subir",
     "x": "X",
     "y": "Y",
-    "label": "Label",
+    "label": "Etiqueta",
     "media": "Media",
     "sprite": "Sprite",
-    "image": "Image",
+    "image": "Imagen",
     "upload_media": "Subir media",
-    "drop_file_to_upload": "Arrastre y suelte un archivo para subir",
+    "drop_file_to_upload": "Ingrese un archivo para subir",
     "upload_file_to_continue": "Suba un archivo para continuar...",
-    "level_maker": "Level Maker",
-    "level_maker_description": "Through Level Maker, create your own level",
-    "level_name": "Level Name",
-    "level_description": "Level Description",
-    "level_stage": "Level Stage",
-    "lawn_mower": "Lawn Mower",
-    "level_music": "Music",
-    "level_has_sun_falling": "Has sun falling?",
+    "level_maker": "Editor de niveles",
+    "level_maker_description": "Crea tu propio nivel",
+    "level_name": "Nombre del nivel",
+    "level_description": "Descripción del nivel",
+    "level_stage": "Escenario del nivel",
+    "lawn_mower": "Cortadora de césped",
+    "level_music": "Música",
+    "level_has_sun_falling": "¿Dejar caer soles?",
     "level_music_normal": "Normal",
-    "level_music_ultimate": "Ultimate Battle",
-    "level_music_minigame": "Minigame",
-    "map_editor": "Map Editor",
-    "map_editor_horizontal_view": "Horizontal View",
-    "map_editor_vertical_view": "Vertical View",
-    "save_file": "Save file",
-    "map_cannot_be_loaded": "Map cannot be loaded",
-    "map_editor_description": "Through Map Editor, edit your actual world map",
-    "regular_wave": "Basic Wave",
-    "storm_event": "Storm Event",
-    "low_tide": "Low Tide",
-    "sandstorm": "Sandstorm",
-    "snowstorm": "Snowstorm",
-    "entry": "Entry",
-    "column_start": "Column Start",
-    "column_end": "Column End",
-    "group_size": "Group Size",
-    "delay_between_groups": "Delay between groups",
-    "additional_plantfood": "Additional plantfood",
-    "pick_a_zombie": "Pick a zombie",
-    "save": "Save",
-    "zombie": "Zombie",
-    "wave": "Wave",
-    "plant": "Plant",
-    "grid_item": "Grid Item",
-    "expand": "Expand",
-    "edit": "Edit",
-    "delete": "Delete",
-    "start_message": "Wave Start Message",
-    "count": "Count",
-    "detail": "Detail",
-    "done": "Done",
-    "successfully_applied_your_configuration": "Successfully applied your configuration!",
-    "confirmation": "Confirmation",
-    "confirm_apply_configuration": "Are you sure want to apply configuration?",
-    "backup_configuration": "Backup Configuration",
-    "backup_configuration_description": "Backup your configuration before you lost it!",
-    "upload_configuration": "Upload configuration",
-    "save_configuration": "Save Configuration",
-    "load_configuration": "Load Configuration",
-    "apply_configuration": "Apply Configuration",
-    "info": "Info",
-    "configuration_has_been_loaded": "Configuration has been loaded",
-    "miscellaneous": "Miscellaneous",
-    "parachute_rain": "Parachute Rain",
-    "value_cannot_be_null": "Value cannot be null",
-    "value_must_be_an_integer": "Value must be an integer",
-    "value_must_be_an_float": "Value must be an float",
-    "value_cannot_be_empty": "Value cannot be empty",
-    "fall_time": "Fall time",
-    "spider_rain": "Spider Rain",
-    "raiding_party": "Raiding Party",
-    "swashbuckler_count": "Swashbuckler Count",
-    "frost_wind": "Frost Wind",
-    "direction": "Direction",
-    "row": "Row",
-    "add_new_frost_wind": "Add new frost wind",
-    "left": "Left",
-    "right": "Right",
-    "save_finish": "Save finish",
-    "add": "Add",
-    "close": "Close",
-    "dino_wave": "Dino Wave",
-    "dino_type": "Dino Type",
-    "tidal_change": "Tidal Change",
-    "tide_coordinate": "Tide Coordinate",
-    "jam_wave": "Jam Wave",
-    "notification_event": "Notification Event",
-    "loading_error": "Loading Error",
-    "please_configure_resource_location": "Please configure resource location in setting to load this module",
-    "resource_location": "Resource Location",
-    "portal_wave": "Portal Wave",
-    "portal_column": "Portal Column",
-    "portal_row": "Portal Row",
-    "portal_type": "Portal Type",
-    "pick_a_portal": "Pick a portal",
-    "ground_spawn": "Ground Spawn",
-    "necromancy": "Necromancy",
-    "zombie_spawn_wait_time": "Zombie Spawn Wait Time",
-    "suppress_action_if_no_grid_items_found": "Suppress Action If No Grid Items Found",
-    "grid_type": "Grid Type",
-    "message": "Message",
-    "notification": "Notification",
-    "version": "Version",
-    "batch_function": "Batch function"
+    "level_music_ultimate": "Último Batallón",
+    "level_music_minigame": "Minijuego",
+    "map_editor": "Editor de mapas",
+    "map_editor_horizontal_view": "Vista horizontal",
+    "map_editor_vertical_view": "Vista vertical",
+    "save_file": "Guardar archivo",
+    "map_cannot_be_loaded": "El mapa no pudo ser cargado",
+    "map_editor_description": "Edita o crea mapas de mundo",
+    "regular_wave": "Oleada básica",
+    "storm_event": "Evento de tormenta",
+    "low_tide": "Marea baja",
+    "sandstorm": "Tormenta de arena",
+    "snowstorm": "Tormenta de nieve",
+    "entry": "Entrada",
+    "column_start": "Comenzar en columna",
+    "column_end": "Terminar en columna",
+    "group_size": "Tamaño de grupo",
+    "delay_between_groups": "Retraso entre grupos",
+    "additional_plantfood": "Nutriente adicional",
+    "pick_a_zombie": "Seleccione un zombi",
+    "save": "Guardar",
+    "zombie": "Zombi",
+    "wave": "Oleada",
+    "plant": "Planta",
+    "grid_item": "Objeto",
+    "expand": "Expandir",
+    "edit": "Editar",
+    "delete": "Eliminar",
+    "start_message": "Mensaje al empezar oleada",
+    "count": "Contador",
+    "detail": "Detalle",
+    "done": "Hecho",
+    "successfully_applied_your_configuration": "¡Ajuste aplicado correctamente!",
+    "confirmation": "Confirmar",
+    "confirm_apply_configuration": "¿Está seguro de querer aplicar este ajuste?",
+    "backup_configuration": "Guardar ajustes",
+    "backup_configuration_description": "¡Guarda tus ajustes para no perderlos!",
+    "upload_configuration": "Subir ajustes",
+    "save_configuration": "Guardar ajustes",
+    "load_configuration": "Cargar ajustes",
+    "apply_configuration": "Aplicar ajustes",
+    "info": "Info.",
+    "configuration_has_been_loaded": "Los ajustes fueron cargados",
+    "miscellaneous": "Misceláneos",
+    "parachute_rain": "Lluvia de paracaídas",
+    "value_cannot_be_null": "El valor no puede ser nulo",
+    "value_must_be_an_integer": "El valor debe ser un entero",
+    "value_must_be_an_float": "El valor debe ser un decimal",
+    "value_cannot_be_empty": "El valor no puede estar vacío",
+    "fall_time": "Tiempo de caída",
+    "spider_rain": "Enjambre de robots",
+    "raiding_party": "Incursión",
+    "swashbuckler_count": "Número de espadachines",
+    "frost_wind": "Viento helado",
+    "direction": "Dirección",
+    "row": "Fila",
+    "add_new_frost_wind": "Agregar nuevo viento helado",
+    "left": "Izquierda",
+    "right": "Derecha",
+    "save_finish": "Guardar",
+    "add": "Agregar",
+    "close": "Cerrar",
+    "dino_wave": "Oleada del dinosaurio",
+    "dino_type": "Tipo de dinosario",
+    "tidal_change": "Cambio de marea",
+    "tide_coordinate": "Coordinar marea",
+    "jam_wave": "Interferencia de la oleada",
+    "notification_event": "Evento de notificación",
+    "loading_error": "Error al cargar",
+    "please_configure_resource_location": "Configure la localización del Resource en ajustes para cargar este módulo",
+    "resource_location": "Localización de Resource",
+    "portal_wave": "Oleada del portal",
+    "portal_column": "Columna del portal",
+    "portal_row": "Fila del portal",
+    "portal_type": "Tipo de portal",
+    "pick_a_portal": "Seleccione un portal",
+    "ground_spawn": "Invocar desde el suelo",
+    "necromancy": "Nigromancia",
+    "zombie_spawn_wait_time": "Tiempo de espera después de ser invocados",
+    "suppress_action_if_no_grid_items_found": "No activar si no hay objetos encontrados",
+    "grid_type": "Tipo de objeto",
+    "message": "Mensaje",
+    "notification": "Notificación",
+    "version": "Versión",
+    "batch_function": "Función múltiple"
 }
