--- a/Modding/lib/l10n/app_en.arb
+++ b/Modding/lib/l10n/app_en.arb
@@ -1,158 +1,243 @@
 {
-    "@@locale": "en",
-    "author_of_this_locale": "Haruma",
-    "en": "English",
-    "vi": "Vietnamese",
-    "es": "Spanish",
-    "ru": "Russian",
-    "not_specified": "Not specified",
-    "default_setting": "Default setting",
-    "theme": "Theme",
-    "language": "Language",
-    "author": "Translator",
-    "application_setting": "Application Setting",
-    "send_notification": "Send notification",
-    "storage_permission": "Storage permission",
-    "granted": "Granted",
-    "denied": "Denied",
-    "toolchain": "Toolchain",
-    "upload_directory": "Upload directory",
-    "enable": "Enable",
-    "disable": "Disable",
-    "okay": "Okay",
-    "system": "System",
-    "light": "Light",
-    "dark": "Dark",
-    "js_page": "JS Category",
-    "home": "Home",
-    "settings": "Settings",
-    "shell": "Shell",
-    "shell_description": "Use the Shell to process files",
-    "method_picker": "Method Picker",
-    "method_picker_description": "Select method to use from categories of methods",
-    "js_execute": "JS Execute",
-    "js_execute_description": "Run built-in JS",
-    "animation_viewer": "Animation Viewer",
-    "animation_viewer_description": "Through Animation Viewer, view actual animation that will be performed",
-    "toolchain_is_invalid": "Toolchain is invalid",
-    "user_provided": "User Provided",
-    "execute_again": "Execute again?",
-    "yes": "yes",
-    "no": "no",
-    "elapsed_time": "Elapsed time",
-    "upload_file": "Upload file",
-    "recent_files": "Recent files",
-    "cancel": "Cancel",
-    "invalid_request": "Invalid Request",
-    "shell_request_behavior": "Shell cannot be closed until finished",
-    "android_request": "Android Request",
-    "android_storage_access_permission_required": "Android Storage Permission are required to read/write files",
-    "go_to_settings": "Go to Settings",
-    "shell_has_finished": "Shell has finished the job, back to application now!",
-    "use": "Use",
-    "select_option": "Select option",
-    "submit": "Submit",
-    "x": "X",
-    "y": "Y",
-    "label": "Label",
-    "media": "Media",
-    "sprite": "Sprite",
-    "image": "Image",
-    "upload_media": "Upload media",
-    "drop_file_to_upload": "Drop file to upload",
-    "upload_file_to_continue": "Upload file to continue...",
-    "level_maker": "Level Maker",
-    "level_maker_description": "Through Level Maker, create your own level",
-    "level_name": "Level Name",
-    "level_description": "Level Description",
-    "level_stage": "Level Stage",
-    "lawn_mower": "Lawn Mower",
-    "level_music": "Music",
-    "level_has_sun_falling": "Has sun falling?",
-    "level_music_normal": "Normal",
-    "level_music_ultimate": "Ultimate Battle",
-    "level_music_minigame": "Minigame",
-    "map_editor": "Map Editor",
-    "map_editor_horizontal_view": "Horizontal View",
-    "map_editor_vertical_view": "Vertical View",
-    "save_file": "Save file",
-    "map_cannot_be_loaded": "Map cannot be loaded",
-    "map_editor_description": "Through Map Editor, edit your actual world map",
-    "regular_wave": "Basic Wave",
-    "storm_event": "Storm Event",
-    "low_tide": "Low Tide",
-    "sandstorm": "Sandstorm",
-    "snowstorm": "Snowstorm",
-    "entry": "Entry",
-    "column_start": "Column Start",
-    "column_end": "Column End",
-    "group_size": "Group Size",
-    "delay_between_groups": "Delay between groups",
-    "additional_plantfood": "Additional plantfood",
-    "pick_a_zombie": "Pick a zombie",
-    "save": "Save",
-    "zombie": "Zombie",
-    "wave": "Wave",
-    "plant": "Plant",
-    "grid_item": "Grid Item",
-    "expand": "Expand",
-    "edit": "Edit",
-    "delete": "Delete",
-    "start_message": "Wave Start Message",
-    "count": "Count",
-    "detail": "Detail",
-    "done": "Done",
-    "successfully_applied_your_configuration": "Successfully applied your configuration!",
-    "confirmation": "Confirmation",
-    "confirm_apply_configuration": "Are you sure want to apply configuration?",
-    "backup_configuration": "Backup Configuration",
-    "backup_configuration_description": "Backup your configuration before you lost it!",
-    "upload_configuration": "Upload configuration",
-    "save_configuration": "Save Configuration",
-    "load_configuration": "Load Configuration",
-    "apply_configuration": "Apply Configuration",
-    "info": "Info",
-    "configuration_has_been_loaded": "Configuration has been loaded",
-    "miscellaneous": "Miscellaneous",
-    "parachute_rain": "Parachute Rain",
-    "value_cannot_be_null": "Value cannot be null",
-    "value_must_be_an_integer": "Value must be an integer",
-    "value_must_be_an_float": "Value must be an float",
-    "value_cannot_be_empty": "Value cannot be empty",
-    "fall_time": "Fall time",
-    "spider_rain": "Spider Rain",
-    "raiding_party": "Raiding Party",
-    "swashbuckler_count": "Swashbuckler Count",
-    "frost_wind": "Frost Wind",
-    "direction": "Direction",
-    "row": "Row",
-    "add_new_frost_wind": "Add new frost wind",
-    "left": "Left",
-    "right": "Right",
-    "save_finish": "Save finish",
-    "add": "Add",
-    "close": "Close",
-    "dino_wave": "Dino Wave",
-    "dino_type": "Dino Type",
-    "tidal_change": "Tidal Change",
-    "tide_coordinate": "Tide Coordinate",
-    "jam_wave": "Jam Wave",
-    "notification_event": "Notification Event",
-    "loading_error": "Loading Error",
-    "please_configure_resource_location": "Please configure resource location in setting to load this module",
-    "resource_location": "Resource Location",
-    "portal_wave": "Portal Wave",
-    "portal_column": "Portal Column",
-    "portal_row": "Portal Row",
-    "portal_type": "Portal Type",
-    "pick_a_portal": "Pick a portal",
-    "ground_spawn": "Ground Spawn",
-    "necromancy": "Necromancy",
-    "zombie_spawn_wait_time": "Zombie Spawn Wait Time",
-    "suppress_action_if_no_grid_items_found": "Suppress Action If No Grid Items Found",
-    "grid_type": "Grid Type",
-    "message": "Message",
-    "notification": "Notification",
-    "version": "Version",
-    "batch_function": "Batch function"
+	"@@locale": "en",
+	"author_of_this_locale": "Haruma",
+	"en": "English",
+	"vi": "Vietnamese",
+	"es": "Spanish",
+	"ru": "Russian",
+	"not_specified": "Not specified",
+	"default_setting": "Default setting",
+	"theme": "Theme",
+	"language": "Language",
+	"author": "Translator",
+	"application_setting": "Application Setting",
+	"send_notification": "Send notification",
+	"storage_permission": "Storage permission",
+	"granted": "Granted",
+	"denied": "Denied",
+	"toolchain": "Toolchain",
+	"upload_directory": "Upload directory",
+	"enable": "Enable",
+	"disable": "Disable",
+	"okay": "Okay",
+	"system": "System",
+	"light": "Light",
+	"dark": "Dark",
+	"js_page": "JS Category",
+	"home": "Home",
+	"settings": "Settings",
+	"shell": "Shell",
+	"shell_description": "Use the Shell to process files",
+	"method_picker": "Method Picker",
+	"method_picker_description": "Select method to use from categories of methods",
+	"js_execute": "JS Execute",
+	"js_execute_description": "Run built-in JS",
+	"animation_viewer": "Animation Viewer",
+	"animation_viewer_description": "Through Animation Viewer, view actual animation that will be performed",
+	"toolchain_is_invalid": "Toolchain is invalid",
+	"user_provided": "User Provided",
+	"execute_again": "Execute again?",
+	"yes": "yes",
+	"no": "no",
+	"elapsed_time": "Elapsed time",
+	"upload_file": "Upload file",
+	"recent_files": "Recent files",
+	"cancel": "Cancel",
+	"invalid_request": "Invalid Request",
+	"shell_request_behavior": "Shell cannot be closed until finished",
+	"android_request": "Android Request",
+	"android_storage_access_permission_required": "Android Storage Permission are required to read/write files",
+	"go_to_settings": "Go to Settings",
+	"shell_has_finished": "Shell has finished the job, back to application now!",
+	"use": "Use",
+	"select_option": "Select option",
+	"submit": "Submit",
+	"x": "X",
+	"y": "Y",
+	"label": "Label",
+	"media": "Media",
+	"sprite": "Sprite",
+	"image": "Image",
+	"upload_media": "Upload media",
+	"drop_file_to_upload": "Drop file to upload",
+	"upload_file_to_continue": "Upload file to continue...",
+	"level_maker": "Level Maker",
+	"level_maker_description": "Through Level Maker, create your own level",
+	"level_name": "Level Name",
+	"level_description": "Level Description",
+	"level_stage": "Level Stage",
+	"lawn_mower": "Lawn Mower",
+	"level_music": "Music",
+	"level_has_sun_falling": "Has sun falling?",
+	"level_music_normal": "Normal",
+	"level_music_ultimate": "Ultimate Battle",
+	"level_music_minigame": "Minigame",
+	"map_editor": "Map Editor",
+	"map_editor_horizontal_view": "Horizontal View",
+	"map_editor_vertical_view": "Vertical View",
+	"save_file": "Save file",
+	"map_cannot_be_loaded": "Map cannot be loaded",
+	"map_editor_description": "Through Map Editor, edit your actual world map",
+	"regular_wave": "Basic Wave",
+	"storm_event": "Storm Event",
+	"low_tide": "Low Tide",
+	"sandstorm": "Sandstorm",
+	"snowstorm": "Snowstorm",
+	"entry": "Entry",
+	"column_start": "Column Start",
+	"column_end": "Column End",
+	"group_size": "Group Size",
+	"delay_between_groups": "Delay between groups",
+	"additional_plantfood": "Additional plantfood",
+	"pick_a_zombie": "Pick a zombie",
+	"save": "Save",
+	"zombie": "Zombie",
+	"wave": "Wave",
+	"plant": "Plant",
+	"grid_item": "Grid Item",
+	"expand": "Expand",
+	"edit": "Edit",
+	"delete": "Delete",
+	"start_message": "Wave Start Message",
+	"count": "Count",
+	"detail": "Detail",
+	"done": "Done",
+	"successfully_applied_your_configuration": "Successfully applied your configuration!",
+	"confirmation": "Confirmation",
+	"confirm_apply_configuration": "Are you sure want to apply configuration?",
+	"backup_configuration": "Backup Configuration",
+	"backup_configuration_description": "Backup your configuration before you lost it!",
+	"upload_configuration": "Upload configuration",
+	"save_configuration": "Save Configuration",
+	"load_configuration": "Load Configuration",
+	"apply_configuration": "Apply Configuration",
+	"info": "Info",
+	"configuration_has_been_loaded": "Configuration has been loaded",
+	"miscellaneous": "Miscellaneous",
+	"parachute_rain": "Parachute Rain",
+	"value_cannot_be_null": "Value cannot be null",
+	"value_must_be_an_integer": "Value must be an integer",
+	"value_must_be_an_float": "Value must be an float",
+	"value_cannot_be_empty": "Value cannot be empty",
+	"fall_time": "Fall time",
+	"spider_rain": "Spider Rain",
+	"raiding_party": "Raiding Party",
+	"swashbuckler_count": "Swashbuckler Count",
+	"frost_wind": "Frost Wind",
+	"direction": "Direction",
+	"row": "Row",
+	"add_new_frost_wind": "Add new frost wind",
+	"left": "Left",
+	"right": "Right",
+	"save_finish": "Save finish",
+	"add": "Add",
+	"close": "Close",
+	"dino_wave": "Dino Wave",
+	"dino_type": "Dino Type",
+	"tidal_change": "Tidal Change",
+	"tide_coordinate": "Tide Coordinate",
+	"jam_wave": "Jam Wave",
+	"notification_event": "Notification Event",
+	"loading_error": "Loading Error",
+	"please_configure_resource_location": "Please configure resource location in setting to load this module",
+	"resource_location": "Resource Location",
+	"portal_wave": "Portal Wave",
+	"portal_column": "Portal Column",
+	"portal_row": "Portal Row",
+	"portal_type": "Portal Type",
+	"pick_a_portal": "Pick a portal",
+	"ground_spawn": "Ground Spawn",
+	"necromancy": "Necromancy",
+	"zombie_spawn_wait_time": "Zombie Spawn Wait Time",
+	"suppress_action_if_no_grid_items_found": "Suppress Action If No Grid Items Found",
+	"grid_type": "Grid Type",
+	"message": "Message",
+	"notification": "Notification",
+	"version": "Version",
+	"batch_function": "Batch function",
+	"cannot_load_giftbox_world_map": "Cannot load giftbox world map",
+	"cannot_load_level_node": "Cannot load level node",
+	"cannot_load_level_node_gargantuar": "Cannot load level node Gargantuar",
+	"cannot_load_level_node_minigame": "Cannot load level node Minigame",
+	"cannot_load_map_path": "Cannot load map path",
+	"cannot_load_yeti_icon": "Cannot load yeti icon",
+	"cannot_load_zomboss_node_hologram": "Cannot load zomboss node hologram",
+	"cannot_load_buttons_hud_back_normal": "Cannot load buttons hud back normal",
+	"cannot_load_free_pinata": "Cannot load free pinata",
+	"cannot_load_free_pinata_dust": "Cannot load free pinata dust",
+	"cannot_load_buttons_hud_back_selected": "Cannot load buttons hud back selected",
+	"cannot_load_missing_artpiece": "Cannot load missing artpiece",
+	"cannot_load_missing_artpiece_anim": "Cannot load missing artpiece anim",
+	"cannot_load_space_dust": "Cannot load space dust",
+	"cannot_load_space_spiral": "Cannot load space spiral",
+	"cannot_load_ready_seedbank": "Cannot load ready seedbank",
+	"cannot_load_plant_seedbank": "Cannot load plant seedbank",
+	"cannot_find_world": "Cannot find world",
+	"worldmap_loaded": "Worldmap loaded",
+	"section": "Section",
+	"section_description": "Select objects in section",
+	"island_pieces": "Island Pieces",
+	"island_pieces_description": "Open island pieces selection list and place island piece to this section",
+	"animation_pieces": "Animation Pieces",
+	"animation_pieces_description": "Open animation pieces selection list and place animation piece to this section",
+	"events": "Events",
+	"events_description": "Open events selection list and place event to this section",
+	"map_editor_setting": "Map Editor Setting",
+	"map_editor_setting_description": "Change Map editor properties",
+	"palette": "Palette",
+	"palette_description": "Change the map bounding color",
+	"loading": "Loading",
+	"map_settings": "Map Settings",
+	"width": "Width",
+	"height": "Height",
+	"open": "Open",
+	"open_description": "Open a worldmap file",
+	"save_description": "Save the current worldmap file",
+	"eraser": "Eraser",
+	"eraser_description": "Remove objects in the section",
+	"pan_tool": "Pan Tool",
+	"pan_tool_description": "Move the map bound",
+	"resizer": "Resizer",
+	"resizer_description": "Resize the map bound",
+	"position_x": "Position X",
+	"position_y": "Position Y",
+	"world_id": "World ID",
+	"res_id": "Res ID",
+	"world_name": "World Name",
+	"piece_config": "Piece Config",
+	"type": "Type",
+	"id": "ID",
+	"scale_x": "Scale X",
+	"scale_y": "Scale Y",
+	"layer": "Layer",
+	"parallax": "Parallax",
+	"rate": "Rate",
+	"piece_art_flip": "Piece Art Flip",
+	"angle": "Angle",
+	"event_config": "Event Config",
+	"name": "Name",
+	"parent": "Parent",
+	"unlocked_from": "Unlocked From",
+	"auto_visible": "Auto Visible",
+	"event_border": "Event Border",
+	"animation_piece_border": "Animation Piece Border",
+	"level_finished": "Level Finished",
+	"map_grid": "Map Grid",
+	"clear": "Clear",
+	"clear_description": "Remove all current prcoess",
+	"config": "Config",
+	"config_description": "Config Map Editor with your own Settings",
+	"play_single_animation_frame": "Play Single Animation Frame",
+	"mute_audio": "Mute Audio",
+	"filter_quality": "Filter Quality",
+	"world_name_cannot_be_none": "World name cannot be none",
+	"worldmap_saved": "World map saved",
+	"map_bounding_resize": "Map Bounding Resize",
+	"worldmap_has_been_changed": "Worldmap has been changed",
+	"map_editor_config": "Map Editor Config",
+	"config_saved": "Config saved",
+	"confirm_delete": "Confirm delete",
+	"confirm_delete_description": "Are you sure want to delete entire process?",
+	"continue_progress": "Continue progress",
+	"worldmap_has_been_cleared": "Worldmap has been cleared"
 }
